<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.hubco.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--region UserName-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="#D4D5D9"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="0.5dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_light"
                    android:hint="@string/text_username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="#D4D5D9"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--endregion-->

            <!--region Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:boxStrokeColor="#D4D5D9"
                app:boxStrokeWidth="0.5dp"
                app:boxStrokeWidthFocused="0.5dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_light"
                    android:hint="@string/text_password"
                    android:inputType="numberPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#D4D5D9"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--endregion-->

            <!--region Forgot Password-->
            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sf_pro_display_light"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="@color/base_color_blue"
                android:textSize="18sp"
              />
            <!--region Login Button View-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login_gradiant_bg_v2"
                android:fontFamily="@font/sf_pro_display_regular"
                android:padding="13dp"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                />
            <!--endregion-->
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>